# AutoGrader

./: .env.example  .gitignore  HANDOFF.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
documentation/: architecture.md  security_gdpr.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  commands.rs  config.rs  error.rs  export.rs  extract.rs  gdpr.rs  lib.rs  licensing.rs  main.rs  state.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs  repo.rs
src/components/: ActivationGate.tsx  AppShell.tsx  AssignmentForm.tsx  ClassPanel.tsx  GraceBanner.tsx  GradeFlow.tsx  LockScreen.tsx  PreFlight.tsx  ReviewPane.tsx  StudentProfile.tsx  Workspace.tsx
src/lib/: api.ts  types.ts
